--- a/src/components/filter-components/filter/filter.scss
+++ b/src/components/filter-components/filter/filter.scss
@@ -20,8 +20,9 @@
     color: $text-light;
     display: flex;
     justify-content: space-between;
+    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.2);
     align-items: center;
-    border: 2px rgb(230, 228, 228) solid;
+    border: none;
     border-radius: 0.5rem;
     padding: 1rem;
     cursor: pointer;
@@ -36,7 +37,7 @@
       height: 0;
       border-left: 5px solid transparent;
       border-right: 5px solid transparent;
-      border-top: 6px solid rgb(230, 228, 228);
+      border-top: 6px solid black;
       transition: 0.3s;
     }
   }
@@ -46,19 +47,20 @@
     padding: 0.2rem 0.5rem;
     background: $bg-light-color;
     border: 1px solid $bg-light-color;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.2);
     border-radius: 0.5rem;
     color: $text-light;
     position: absolute;
-    top: 9.3rem;
+    top: 6.7rem;
     width: 100%;
     transform: translateY(-50%);
     z-index: 1;
 
     li {
-      padding: 0.7rem 0.5rem;
+      padding: 0.3rem 0.5rem;
       margin: 0.3 0;
       border-radius: 0.5rem;
+      font-size: 14px;
       cursor: pointer;
 
       &:hover {
