--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -15,6 +15,7 @@
   height: 3rem;
   display: flex;
   align-items: center;
+  padding: 2rem;
 
   .header_container {
     width: 100%;
@@ -27,12 +28,16 @@
     align-items: center;
 
     .title {
-      font-size: 16px;
-      font-weight: 600;
+      font-size: 18px;
+      font-weight: 800;
     }
 
     .switcher {
       font-size: 12px;
+      font-weight: 600;
+      width: 5rem;
+      display: flex;
+      justify-content: space-between;
       cursor: pointer;
     }
   }
