--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -1,19 +1,59 @@
+@import "../../sass/variable";
+
 .card{
     width: 100%;
-    max-width: 20rem;
-    border: 1px grey solid;
-    border-radius: 0.4rem;
+    max-width: 18rem;
     height: 100%;
     max-height: 20rem;
+    font-family: $font-base ;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3rem;
+
+  
+    text-decoration: none;
+    color: $text-light;
     
-    img{
+    
+    &__img{
         width: 100%;
         height: 10rem;
+        margin:0;
+        padding: 0;
+        border-top-left-radius: 0.4rem;
+        border-top-right-radius: 0.4rem;
+        
+        
     }
 
     &__body{
+        height: 100%;
         display: flex;
         flex-direction: column;
+        margin: 0;
+        padding: 0;
+        gap: 0.3rem;
+        padding: 1rem;
+        border-bottom-left-radius: 0.4rem;
+        border-bottom-right-radius: 0.4rem;
+        background-color: $ui-light-base;
+        
+       
+
+
+        .strong{
+            font-weight: 800;
+            font-size: 14px;
+        }
+
+
+        header{
+            margin-bottom: 0.6rem;
+            font-weight: 800;
+            font-size: 22px;
+        }
+        
     }
 
 }
