--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -1,10 +1,49 @@
 .dashboard__container {
     width: 100%;
     max-width: 90rem;
-    margin: 0 auto;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    margin: 2rem  auto;
+    padding-left: 2rem;
+    padding-right: 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+
+
+    .row{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+
+        width: 100%;
+        max-width: 90rem;
+        row-gap: 1rem;
+
+        @media (max-width: 640px) {
+            
+           justify-content: center;
+            
+        }
+    }
+}
+
+
+.error{
+    width: 100%;
+    max-width: 40rem;
+    margin:5rem auto;
+    font-size: 30px;
+    color:red; 
+    font-weight: 600;
+    text-align: center;
+}
+
+.loading{
+    width: 100%;
+    max-width: 40rem;
+    margin:5rem auto;
+    font-size: 30px; 
+    font-weight: 600;
+    text-align: center;   
 }
