--- a/src/components/back/back.scss
+++ b/src/components/back/back.scss
@@ -10,5 +10,7 @@
     height: 2rem;
     box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
     text-decoration: none;
+    background-color: $ui-light-base;
     color: $text-light;
+    border: none;
 }
