--- a/src/components/back/back.scss
+++ b/src/components/back/back.scss
@@ -1,16 +1,18 @@
 @import "../../sass/variable";
-.go-back{
-    width:100%;
-    max-width: 7rem;
-    margin-top: 3rem;
-    display: flex;
-    gap:1rem;
-    justify-content: center;
-    align-items: center;
-    height: 2rem;
-    box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
-    text-decoration: none;
-    background-color: $ui-light-base;
-    color: $text-light;
-    border: none;
+.go-back {
+  width: 100%;
+  max-width: 7rem;
+  margin-top: 3rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  height: 2rem;
+  box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
+  text-decoration: none;
+  background-color: $ui-light-base;
+  color: $text-light;
+  border: none;
+  border-radius: 0.3rem;
+  cursor: pointer;
 }
