--- a/src/pages/detail/detail.scss
+++ b/src/pages/detail/detail.scss
@@ -1,3 +1,5 @@
+@import '../../sass/variable';
+
 .detail__container {
   width: 100%;
   max-width: 90rem;
@@ -7,21 +9,21 @@
 }
 
 .data-container {
-  border: 1px solid red;
+ 
   width: 100%;
   max-width: 90rem;
   margin: 0 auto;
   height: 35rem;
   display: flex;
-  justify-content: space-between;
+  gap: 7rem;
   align-items: center;
 
   &__flag {
-    border: 1px solid green;
+    
     width: 100%;
     height: 100%;
     max-width: 40rem;
-    max-height: 30rem;
+    max-height: 25rem;
     border-radius: 0.4rem;
 
     img {
@@ -33,10 +35,36 @@
   &__data {
     &--info {
       display: flex;
+      gap: 4rem;
+      line-height: 1.9rem;
+
+      ul{
+        list-style: none;
+        padding: 0;
+
+        span{
+          font-weight: 800;
+          font-family: $font-base ;
+        }
+      }
     }
 
     &--borders {
       display: flex;
+      align-items: center;
+
+      ul{
+        list-style: none;
+
+        li{
+          
+          padding: 0.3rem;
+          box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
+          border-radius: 0.2rem;
+          cursor: pointer;
+        }
+      }
     }
+ 
   }
 }
