filter need correction

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -30,6 +30,10 @@
     .title {
       font-size: 18px;
       font-weight: 800;
+      background-color: $ui-light-base;
+      border: none;
+      text-decoration: none;
+      color: black;
     }
 
     .switcher {
