--- a/src/pages/detail/detail.scss
+++ b/src/pages/detail/detail.scss
@@ -1,4 +1,4 @@
-@import '../../sass/variable';
+@import "../../sass/variable";
 
 .detail__container {
   width: 100%;
@@ -9,7 +9,6 @@
 }
 
 .data-container {
- 
   width: 100%;
   max-width: 90rem;
   margin: 0 auto;
@@ -19,12 +18,12 @@
   align-items: center;
 
   &__flag {
-    
     width: 100%;
     height: 100%;
     max-width: 40rem;
     max-height: 25rem;
     border-radius: 0.4rem;
+    padding-left: 1rem;
 
     img {
       width: 100%;
@@ -38,33 +37,76 @@
       gap: 4rem;
       line-height: 1.9rem;
 
-      ul{
+      .languages {
+        display: inline-block;
+        margin-right: 0.3rem;
+
+        &::after {
+          content: ",";
+        }
+
+        &:last-child::after {
+          content: "";
+        }
+      }
+
+      ul {
         list-style: none;
         padding: 0;
 
-        span{
+        span {
           font-weight: 800;
-          font-family: $font-base ;
+          font-family: $font-base;
         }
       }
     }
 
     &--borders {
-      display: flex;
-      align-items: center;
+      img {
+        max-width: 2rem;
+        width: 100%;
+      }
 
-      ul{
-        list-style: none;
+      ul {
+        display: flex;
+        gap: 0.3rem;
+        align-items: center;
+        padding-left: 0;
 
-        li{
-          
-          padding: 0.3rem;
-          box-shadow: 0 0 0.3rem rgba(0, 0, 0, 0.3);
-          border-radius: 0.2rem;
-          cursor: pointer;
+        a:link {
+          text-decoration: none;
+          color: black;
+
+          &:visited {
+            color: black;
+          }
+        }
+        li {
+          display: flex;
+          flex-wrap: wrap;
+          gap: 0.4rem;
+          margin-right: 0.5rem;
         }
       }
     }
- 
   }
+}
+
+.error_detail {
+  width: 100%;
+  max-width: 40rem;
+  margin: 5rem auto;
+  font-size: 30px;
+  color: red;
+  font-weight: 600;
+  text-align: center;
+}
+
+.loading_detail {
+  width: 100%;
+  max-width: 40rem;
+  margin: 5rem auto;
+  font-size: 30px;
+  font-weight: 600;
+  text-align: center;
 }
