--- a/src/components/filter-components/filter/filter.scss
+++ b/src/components/filter-components/filter/filter.scss
@@ -28,9 +28,7 @@
     cursor: pointer;
     transition: 0.3s;
 
-    &:hover {
-      background: $ui-light-base;
-    }
+    
 
     &--caret {
       width: 0;
@@ -56,6 +54,13 @@
     transform: translateY(-50%);
     z-index: 1;
 
+    &__dark{
+      background: $ui-dark-base;
+      border: 1px solid $bg-dark-color;
+      color: $text-dark;
+
+    }
+
     li {
       padding: 0.3rem 0.5rem;
       margin: 0.3 0;
@@ -63,13 +68,24 @@
       font-size: 14px;
       cursor: pointer;
 
-      &:hover {
-        background: $ui-light-base;
-      }
+     
+      
     }
   }
 }
 
 .caret--rotate {
   transform: rotateX(180deg);
+}
+
+.dark{
+  background-color: $ui-dark-base;
+  color: $text-dark;
+}
+
+.li__dark{
+    &:hover {
+      background: $bg-dark-color;
+
+  }
 }
