--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -14,6 +14,17 @@
     
     text-decoration: none;
     color: $text-light;
+
+    @media (max-width: 1000px){
+        margin-bottom: 5px;
+    }
+
+    @media (max-width: 720px){
+        margin-bottom: 5px;
+        max-width: 25rem;
+        max-height: 27rem;
+        height: 100%;
+    }
     
     
     &__img{
