--- a/src/pages/detail/detail.scss
+++ b/src/pages/detail/detail.scss
@@ -6,6 +6,11 @@
   margin: 3rem auto;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+  max-height: 100vh;
+
+  @media(max-width: 1200px){
+    max-width: 70rem;
+  }
 }
 
 .data-container {
@@ -16,6 +21,28 @@
   display: flex;
   gap: 7rem;
   align-items: center;
+  
+
+  @media(max-width: 1300px){
+    font-size: 12px;
+    gap: 3rem;
+
+  }
+
+  @media(max-width: 1200px){
+    font-size: 12px;
+    gap: 3rem;
+  }
+
+  
+  @media(max-width: 900px){
+    flex-direction: column;
+    gap: 1rem;
+    font-size: 16px;
+    
+  }
+
+
 
   &__flag {
     width: 100%;
@@ -25,6 +52,30 @@
     border-radius: 0.4rem;
     padding-left: 1rem;
 
+    @media(max-width: 1200px){
+      width: 100%;
+      height: 100%;
+      max-width: 35rem;
+      max-height: 20rem;
+      
+    }
+
+    @media(max-width: 1000px){
+      width: 100%;
+      height: 100%;
+      max-width: 30rem;
+      max-height: 15rem;
+    }
+
+    @media(max-width: 900px){
+      width: 100%;
+      height: 100%;
+      max-width: 40rem;
+      max-height: 18rem;
+      padding-left: 0;
+      
+    }
+
     img {
       width: 100%;
       height: 100%;
@@ -32,10 +83,33 @@
   }
 
   &__data {
+
+    @media(max-width: 900px){
+      width: 100%;
+      height: 100%;
+      max-width: 40rem;
+      max-height: 18rem;
+      
+     
+    }
+
+   
     &--info {
       display: flex;
       gap: 4rem;
       line-height: 1.9rem;
+
+      @media(max-width: 1100px){
+        gap: 2rem;
+        line-height: 1.5rem;
+      }
+
+      @media(max-width: 1100px){
+        gap: 0.5rem;
+        line-height: 1.4rem;
+      }
+
+      
 
       .languages {
         display: inline-block;
@@ -62,6 +136,17 @@
     }
 
     &--borders {
+      margin-bottom: 3rem;
+
+      @media(max-width: 1000px){
+        display: flex;
+        flex-wrap: wrap;
+        
+        h5{
+          margin-right: 10px;
+        }
+      }
+
       img {
         max-width: 2rem;
         width: 100%;
@@ -72,6 +157,8 @@
         gap: 0.3rem;
         align-items: center;
         padding-left: 0;
+
+        
 
         a:link {
           list-style: none;
